src/test/ui/feature-gate-no_core.stderr
error[E0658]: no_core is experimental (see issue #29639)
  --> $DIR/feature-gate-no_core.rs:11:1
   |
LL | #![no_core] //~ ERROR no_core is experimental
   | ^^^^^^^^^^^
   |
   = help: add #![feature(no_core)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
